crates/sources/src/scenarios/snapshots/sources__scenarios__catalog_import_cycles.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/A,
        },
        Fetch {
            depth: 2,
            resource: test://example/B,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
        Fetch {
            depth: 3,
            resource: test://example/A.ts,
        },
        Fetch {
            depth: 3,
            resource: test://example/B.ts,
        },
        Fetch {
            depth: 3,
            resource: test://example/C,
        },
        Fetch {
            depth: 4,
            resource: test://example/C.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/A,
            from_resource: test://example/A,
            to_resource: test://example/A.ts,
        },
        Import {
            scope: test://example/A#/import/1,
            from_resource: test://example/A,
            to_resource: test://example/B,
        },
        Import {
            scope: test://example/A#/import/0,
            from_resource: test://example/A,
            to_resource: test://example/C,
        },
        Import {
            scope: test://example/B#/import/1,
            from_resource: test://example/B,
            to_resource: test://example/A,
        },
        Import {
            scope: test://example/B,
            from_resource: test://example/B,
            to_resource: test://example/B.ts,
        },
        Import {
            scope: test://example/B#/import/0,
            from_resource: test://example/B,
            to_resource: test://example/C,
        },
        Import {
            scope: test://example/C#/import/1,
            from_resource: test://example/C,
            to_resource: test://example/B,
        },
        Import {
            scope: test://example/C,
            from_resource: test://example/C,
            to_resource: test://example/C.ts,
        },
        Import {
            scope: test://example/C#/import/0,
            from_resource: test://example/C,
            to_resource: test://example/catalog.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/import/0,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/A,
        },
        Import {
            scope: test://example/catalog.yaml#/import/1,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/B,
        },
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
    ],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/A,
            content_type: "CATALOG",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/B,
            content_type: "CATALOG",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/C,
            content_type: "CATALOG",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
        },
    ],
    schema_docs: [],
    storage_mappings: [],
    test_steps: [],
    transforms: [],
}
