crates/sources/src/scenarios/snapshots/sources__scenarios__collections.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [
        Collection {
            scope: test://example/catalog.yaml#/collections/test~1collection,
            collection: test/collection,
            schema: test://example/schema.json#foobar,
            key: ["/key/1","/key/0"],
        },
    ],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            resource: test://example/catalog.ts,
        },
        Fetch {
            resource: test://example/catalog.yaml,
        },
        Fetch {
            resource: test://example/schema.json,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/test~1collection/schema,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/schema.json,
        },
    ],
    journal_rules: [],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [
        Projection {
            scope: test://example/catalog.yaml#/collections/test~1collection/projections/field_a,
            collection: test/collection,
            field: field_a,
            location: /a/a,
            partition: 1,
            user_provided: 1,
        },
        Projection {
            scope: test://example/catalog.yaml#/collections/test~1collection/projections/field_b,
            collection: test/collection,
            field: field_b,
            location: /b/b,
            partition: 0,
            user_provided: 1,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/schema.json,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
    ],
    schema_docs: [
        SchemaDoc {
            schema: test://example/schema.json,
            dom: {"$anchor":"foobar","properties":{"a":{"properties":{"a":{"type":"string"}},"type":"object"},"b":{"properties":{"b":{"type":"string"}},"type":"object"},"key":{"items":{"type":"string"},"minItems":2,"type":"array"}},"type":"object"},
        },
    ],
    shard_rules: [],
    test_steps: [],
    transforms: [],
}
