crates/sources/src/scenarios/snapshots/sources__scenarios__endpoints_captures_materializations.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    captures: [
        Capture {
            scope: test://example/catalog.yaml#/captures/0,
            collection: a/collection,
            endpoint: my bucket,
            patch_config: {},
        },
        Capture {
            scope: test://example/catalog.yaml#/captures/1,
            collection: other/collection,
            endpoint: my DB,
            patch_config: {"extra":"stuff"},
        },
    ],
    collections: [],
    derivations: [],
    endpoints: [
        Endpoint {
            scope: test://example/catalog.yaml#/endpoints/my%20Postgres,
            endpoint: my Postgres,
            endpoint_type: "Postgresql",
            base_config: {"dbname":null,"host":"localhost","password":"whoops","port":null,"user":"somebody"},
        },
        Endpoint {
            scope: test://example/catalog.yaml#/endpoints/my%20bucket,
            endpoint: my bucket,
            endpoint_type: "S3",
            base_config: {"bucket":"foobar","prefix":"path/prefix"},
        },
        Endpoint {
            scope: test://example/catalog.yaml#/endpoints/my%20sqlite,
            endpoint: my sqlite,
            endpoint_type: "Sqlite",
            base_config: {"path":"test://example/relative/to/scope.db"},
        },
    ],
    errors: [],
    fetches: [
        Fetch {
            resource: test://example/catalog.yaml,
        },
        Fetch {
            resource: test://example/catalog.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
    ],
    journal_rules: [],
    materializations: [
        Materialization {
            scope: test://example/catalog.yaml#/materializations/0,
            collection: source/collection,
            endpoint: my DB,
            fields_exclude: [],
            fields_include: {},
            fields_recommended: 1,
            patch_config: {"table":"table_one"},
            source_partitions: NULL,
        },
        Materialization {
            scope: test://example/catalog.yaml#/materializations/1,
            collection: source/collection,
            endpoint: my DB,
            fields_exclude: ["del"],
            fields_include: {"add":{}},
            fields_recommended: 1,
            patch_config: {"table":"table_two"},
            source_partitions: {"include":{"a_field":["some-val"]},"exclude":{"other":[42]}},
        },
    ],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
    ],
    schema_docs: [],
    shard_rules: [],
    test_steps: [],
    transforms: [],
}
