crates/sources/src/scenarios/snapshots/sources__scenarios__schema_with_inline.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
Tables {
    captures: [],
    collections: [
        Collection {
            scope: test://example/catalog.yaml#/collections/test,
            collection: test,
            schema: test://example/catalog.yaml?ptr=/collections/test/schema,
            key: ["/some-key"],
        },
    ],
    derivations: [],
    endpoints: [],
    errors: [],
    fetches: [
        Fetch {
            resource: test://example/catalog.yaml,
        },
        Fetch {
            resource: test://example/catalog.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/collections/test/schema,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.yaml?ptr=/collections/test/schema,
            include: 1,
        },
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
            include: 1,
        },
    ],
    journal_rules: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/catalog.yaml?ptr=/collections/test/schema,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
    ],
    schema_docs: [
        SchemaDoc {
            schema: test://example/catalog.yaml?ptr=/collections/test/schema,
            dom: {"additionalProperties":true,"type":"object"},
        },
    ],
    test_steps: [],
    transforms: [],
}
