crates/sources/src/scenarios/snapshots/sources__scenarios__schema_with_nested_ids.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [
        Collection {
            scope: test://example/catalog.yaml#/collections/a~1collection,
            collection: a/collection,
            schema: test://example/actual,
            key: ["/key"],
            journals: {"fragments":{}},
        },
    ],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/actual,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/collections/a~1collection/schema,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/actual,
        },
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
    ],
    journal_rules: [],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/actual,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
    ],
    schema_docs: [
        SchemaDoc {
            schema: test://example/actual,
            dom: {"$defs":{"wrapper":{"$defs":{"a":{"$id":"test://fake/other/a-doc","items":[true,{"$ref":"b-doc#/items/1"}]},"b":{"$id":"test://fake/other/b-doc","items":[{"$ref":"a-doc#/items/0"},true]},"c":true},"$id":"test://fake/root","allOf":[{"$ref":"other/a-doc#/items/1"},{"$ref":"test://fake/other/b-doc#/items/0"},{"$ref":"#/$defs/c"},{"$ref":"test://fake/root#/$defs/c"}]}},"$ref":"test://fake/root"},
        },
    ],
    storage_mappings: [],
    test_steps: [],
    transforms: [],
}
