crates/sources/src/scenarios/snapshots/sources__scenarios__schema_with_references.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [
        Collection {
            scope: test://example/catalog.yaml#/collections/test,
            collection: test,
            schema: test://external/a#/$defs/a,
            key: ["/a"],
            journals: {"fragments":{}},
        },
    ],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
        Fetch {
            depth: 2,
            resource: test://external/a,
        },
        Fetch {
            depth: 3,
            resource: test://external/b,
        },
        Fetch {
            depth: 4,
            resource: test://external/c,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/test/schema,
            from_resource: test://example/catalog.yaml,
            to_resource: test://external/a,
        },
        Import {
            scope: test://external/a#/$defs/a/$ref,
            from_resource: test://external/a,
            to_resource: test://external/b,
        },
        Import {
            scope: test://external/b#/$defs/c/$ref,
            from_resource: test://external/b,
            to_resource: test://external/c,
        },
    ],
    journal_rules: [],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
        Resource {
            resource: test://external/a,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
        Resource {
            resource: test://external/b,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
        Resource {
            resource: test://external/c,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
    ],
    schema_docs: [
        SchemaDoc {
            schema: test://external/a,
            dom: {"$defs":{"a":{"$ref":"b#/$defs/c"}}},
        },
        SchemaDoc {
            schema: test://external/b,
            dom: {"$defs":{"c":{"$ref":"c"}}},
        },
        SchemaDoc {
            schema: test://external/c,
            dom: true,
        },
    ],
    storage_mappings: [],
    test_steps: [],
    transforms: [],
}
