crates/sources/src/scenarios/snapshots/sources__scenarios__simple_catalog.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [
        Collection {
            scope: test://example/catalog.yaml#/collections/a~1collection,
            collection: a/collection,
            schema: test://example/schema,
            key: ["/key"],
            journals: {"fragments":{}},
        },
    ],
    derivations: [],
    errors: [
        Error {
            scope: test://example/catalog.yaml#/import/1,
            error: failed to fetch resource test://not/found
            
            Caused by:
                fixture not found,
        },
    ],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
        Fetch {
            depth: 2,
            resource: test://example/schema,
        },
        Fetch {
            depth: 2,
            resource: test://example/sibling,
        },
        Fetch {
            depth: 2,
            resource: test://not/found,
        },
        Fetch {
            depth: 3,
            resource: test://example/sibling.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/a~1collection/schema,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/schema,
        },
        Import {
            scope: test://example/catalog.yaml#/import/0,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/sibling,
        },
        Import {
            scope: test://example/catalog.yaml#/import/1,
            from_resource: test://example/catalog.yaml,
            to_resource: test://not/found,
        },
        Import {
            scope: test://example/sibling,
            from_resource: test://example/sibling,
            to_resource: test://example/sibling.ts,
        },
    ],
    journal_rules: [],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [
        NPMDependency {
            scope: test://example/catalog.yaml#/npmDependencies/package-one,
            package: package-one,
            version: v0.1.2,
        },
        NPMDependency {
            scope: test://example/catalog.yaml#/npmDependencies/pkg-2,
            package: pkg-2,
            version: ~v2,
        },
    ],
    projections: [
        Projection {
            scope: test://example/catalog.yaml#/collections/a~1collection/projections/baz,
            collection: a/collection,
            field: baz,
            location: /bing,
            partition: 1,
            user_provided: 1,
        },
        Projection {
            scope: test://example/catalog.yaml#/collections/a~1collection/projections/foo,
            collection: a/collection,
            field: foo,
            location: /bar,
            partition: 0,
            user_provided: 1,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/schema,
            content_type: "JsonSchema",
            content: ".. binary ..",
        },
        Resource {
            resource: test://example/sibling,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
    ],
    schema_docs: [
        SchemaDoc {
            schema: test://example/schema,
            dom: true,
        },
    ],
    storage_mappings: [],
    test_steps: [],
    transforms: [],
}
