crates/sources/src/scenarios/snapshots/sources__scenarios__storage_mappings.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
    ],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
    ],
    schema_docs: [],
    storage_mappings: [
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/2,
            prefix: ,
            stores: [{"provider":"S3","bucket":"root-bucket","prefix":null}],
        },
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/0,
            prefix: foo/bar/baz/,
            stores: [{"provider":"GCS","bucket":"a-bucket","prefix":"and-prefix/"},{"provider":"S3","bucket":"s3-bucket","prefix":null}],
        },
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/1,
            prefix: other/thing/,
            stores: [{"provider":"AZURE","bucket":"s3-bucket","prefix":null}],
        },
    ],
    test_steps: [],
    transforms: [],
}
