crates/sources/src/scenarios/snapshots/sources__scenarios__test_case.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables

---
Tables {
    capture_bindings: [],
    captures: [],
    collections: [],
    derivations: [],
    errors: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/catalog.ts,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml,
            from_resource: test://example/catalog.yaml,
            to_resource: test://example/catalog.ts,
        },
    ],
    journal_rules: [],
    materialization_bindings: [],
    materializations: [],
    named_schemas: [],
    npm_dependencies: [],
    projections: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CatalogSpec",
            content: ".. binary ..",
        },
    ],
    schema_docs: [],
    test_steps: [
        TestStep {
            scope: test://example/catalog.yaml#/tests/A%20test%20case/0,
            collection: test/collection,
            documents: [{"ingest":1},true],
            partitions: NULL,
            step_index: 0,
            step_type: "Ingest",
            test: A test case,
        },
        TestStep {
            scope: test://example/catalog.yaml#/tests/A%20test%20case/1,
            collection: test/collection,
            documents: [{"verify":2},false],
            partitions: NULL,
            step_index: 1,
            step_type: "Verify",
            test: A test case,
        },
        TestStep {
            scope: test://example/catalog.yaml#/tests/A%20test%20case/2,
            collection: test/collection,
            documents: [{"verify":3},"fin"],
            partitions: {"include":{"a_field":["some-val"]},"exclude":{}},
            step_index: 2,
            step_type: "Verify",
            test: A test case,
        },
    ],
    transforms: [],
}
